<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_nav4d_ros2</name>
  <version>1.0.0</version>
  <description>A ROS2 wrapper for the ugv_nav4d path planner library</description>
  <maintainer email="haider_khan.lodhi@dfki.de"></maintainer>
  <license>BSD 3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>rviz_common</depend>
    <depend>rviz_rendering</depend>
    <depend>planning-ugv_nav4d</depend>
    
    <build_depend>rosidl_default_generators</build_depend>
    
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rviz_common_plugins</member_of_group>
    <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
